= Changelog


== Release 0.4.0

* CHANGED: Rename library from DomainName to PublicSuffixService to reduce the probability of name conflicts.


== Release 0.3.1

* Deprecated DomainName library.


== Release 0.3.0

* CHANGED: DomainName#domain and DomainName#subdomain are no longer alias of Domain#sld and Domain#tld.

* CHANGED: Removed DomainName#labels and decoupled Rule from DomainName.

* CHANGED: DomainName#valid? no longer instantiates new DomainName objects. This means less overhead.

* CHANGED: Refactoring the entire DomainName API. Removed the internal on-the-fly parsing. Added a bunch of new methods to check and validate the DomainName.


== Release 0.2.0

* ADDED: DomainName#valid?

* ADDED: DomainName#parse and DomainName#parse!

* ADDED: DomainName#valid_domain? and DomainName#valid_subdomain?

* CHANGED: Make sure RuleList lookup is only performed once.


== Release 0.1.0

* Initial version